# ai-task

./: .env  ANALYSE_STRUCTURE_FINALE.md  ANTI_REGENERATION_GUIDE.md  GUIDE_TESTS_MANUELS.md  PRESENTATION_ENCADRANT.md  RAPPORT_TECHNIQUE_COMPLET.md  README.md  TODO.md  backend.py  config.py  create_validate_test.py  debug_stats.py  debug_task_location.py  depoilement.txt  diagnostic_fichiers.py  diagnostic_system.py  gui.py  main.py  pyproject.toml  requirements.txt  test_all_tasks.py  test_all_tasks_limit.py  test_api.py  test_complet_final.py  test_final_all_endpoints.py  test_meetings_endpoint.py  test_server_connection.py  test_stats.py  test_stats_direct.py  test_stats_improved.py  test_tag_suggestions.py  test_validate_button.py  test_validate_complete.py  test_validate_detailed.py  test_validate_quick.py  test_validation_complete.py  test_validation_complete_flow.py  test_validation_final.py  test_validation_simple.py  utils.py
.cursor/rules/: agent.mdc
config/: settings.py
data/: emails.json  emails_cache.json  logs.json  meeting_logs.json  meeting_tasks.json  meetings.json  rate_limiter_history.json  tasks.json  unified_tasks.json
docs/: DOCUMENTATION_COMPLETE.md  QUICK_START.md
frontend/: ETAPE_2_IMPLEMENTATION.md  ETAPE_3_IMPLEMENTATION.md  ETAPE_4_IMPLEMENTATION.md  ETAPE_5_IMPLEMENTATION.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: App.tsx  DebugApp.tsx  SimpleDashboard.tsx  TestApp.tsx  TestTailwind.tsx  TestValidation.tsx  WorkingDashboard.tsx  index.css  (+1 more)
tests/: __init__.py  test_api.py
(+97 files in other folders)
