[project]
name = "todo-app"
version = "0.1.0"
description = "A simple TODO app with FastAPI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.6",
    "alembic>=1.12.0",
    "fastapi-mail>=1.4.1",
    "aiosmtplib>=3.0.0",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "python-magic>=0.4.27"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0"
]
